--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,16 +5,19 @@ on:
     branches:
       - master
 
+permissions:
+  contents: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Récupérer le code
+      - name: Checkout du dépôt
         uses: actions/checkout@v3
 
-      - name: Déployer sur GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Déploiement sur GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./
-	  publish_branch: gh-pages
+          publish_branch: gh-pages
